updating bbwadg cfd files

--- a/docs/elasticity_notes/letter.tex
+++ b/docs/elasticity_notes/letter.tex
@@ -5,9 +5,9 @@
 Houston, TX 77005}
 
 \begin{document}
-\begin{letter}{Dr.\ Charbel Farhat\\Editor of IJNME}
+\begin{letter}{Dr.\ Antonio Huerta\\Editor of IJNME}
 
-\opening{Dear Dr.\ Farhat}
+\opening{Dear Dr.\ Huerta}
 
 Please find enclosed the manuscript, 
 \begin{center}
