--- a/docs/elasticity_notes/novelty.tex
+++ b/docs/elasticity_notes/novelty.tex
@@ -9,6 +9,7 @@
 \item Extension of weight-adjusted inner products (closed-form approximation of the inverse of a weighted mass matrix) to matrix-valued weights.  
 \item A new discontinuous Galerkin (DG) method with simplified numerical fluxes for elastic wave propagation in arbitrary heterogeneous media.  
 \item Proofs of energy stability and high order accuracy for the proposed DG method.  
+\item Numerical and computational experiments illustrating the theoretical results and performance of a GPU-accelerated implementation of the proposed method.  
 \end{itemize}
 
 
