--- a/docs/entropy2D/dg.bib
+++ b/docs/entropy2D/dg.bib
@@ -1,3 +1,24 @@
+@article{kopriva2006metric,
+  title={Metric identities and the discontinuous spectral element method on curvilinear meshes},
+  author={Kopriva, David A},
+  journal={Journal of Scientific Computing},
+  volume={26},
+  number={3},
+  pages={301--327},
+  year={2006},
+  publisher={Springer}
+}
+
+@article{johnen2013geometrical,
+  title={Geometrical validity of curvilinear finite elements},
+  author={Johnen, Amaury and Remacle, J.F. and Geuzaine, Christophe},
+  journal={Journal of Computational Physics},
+  volume={233},
+  pages={359--372},
+  year={2013},
+  publisher={Elsevier}
+}
+
 @article{shu2009high,
   title={High order weighted essentially nonoscillatory schemes for convection dominated problems},
   author={Shu, Chi-Wang},
