--- a/docs/splitform/dg.bib
+++ b/docs/splitform/dg.bib
@@ -1,3 +1,41 @@
+@article{fernandez2014generalized,
+  title={{A generalized framework for nodal first derivative summation-by-parts operators}},
+  author={Fern{\'a}ndez, David C Del Rey and Boom, Pieter D and Zingg, David W},
+  journal={Journal of Computational Physics},
+  volume={266},
+  pages={214--239},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{fernandez2014review,
+  title={{Review of summation-by-parts operators with simultaneous approximation terms for the numerical solution of partial differential equations}},
+  author={Fern{\'a}ndez, David C Del Rey and Hicken, Jason E and Zingg, David W},
+  journal={Computers \& Fluids},
+  volume={95},
+  pages={171--196},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@inproceedings{crean2017high,
+  title={{High-Order, Entropy-Stable Discretizations of the Euler Equations for Complex Geometries}},
+  author={Crean, Jared and Hicken, Jason E and Del Rey Fern{\'a}ndez, David C and Zingg, David W and Carpenter, Mark H},
+  booktitle={{23rd AIAA Computational Fluid Dynamics Conference}},
+  year={2017},
+  doi={doi:10.2514/6.2017-4496},
+  organization={American Institute of Aeronautics and Astronautics}
+}
+
+@incollection{shu1998essentially,
+  title={Essentially non-oscillatory and weighted essentially non-oscillatory schemes for hyperbolic conservation laws},
+  author={Shu, Chi-Wang},
+  booktitle={Advanced numerical approximation of nonlinear hyperbolic equations},
+  pages={325--432},
+  year={1998},
+  publisher={Springer}
+}
+
 @article{shu2009high,
   title={High order weighted essentially nonoscillatory schemes for convection dominated problems},
   author={Shu, Chi-Wang},
