--- a/docs/splitform/main.tex
+++ b/docs/splitform/main.tex
@@ -326,7 +326,7 @@ legend style={font=\small}
 \address[rice]{Department of Computational and Applied Mathematics, Rice University, 6100 Main St, Houston, TX, 77005}
 
 \begin{abstract}
-High order methods based on diagonal-norm summation by parts operators can be shown to satisfy a discrete conservation or dissipation of entropy for nonlinear systems of hyperbolic PDEs \cite{fisher2013high, carpenter2014entropy}.  These methods can also be interpreted as nodal discontinuous Galerkin methods with diagonal mass matrices \cite{gassner2016split, gassner2016well, wintermeyer2017entropy, chen2017entropy}.  In this work, we describe how to construct discretely entropy conservative schemes to a more general class of DG methods using flux differencing, quadrature-based projections, and specific DG differentiation operators.  This approach also recovers existing methods for Burgers' equation involving dense norm and generalized SBP operators without boundary nodes \cite{ranocha2016summation, ranocha2017extended}.  Numerical experiments confirm the stability and high order accuracy of the proposed methods for the one-dimensional compressible Euler equations.  
+High order methods based on diagonal-norm summation by parts operators can be shown to satisfy a discrete conservation or dissipation of entropy for nonlinear systems of hyperbolic PDEs \cite{fisher2013high, carpenter2014entropy}.  These methods can also be interpreted as nodal discontinuous Galerkin methods with diagonal mass matrices \cite{gassner2016split, gassner2016well, wintermeyer2017entropy, chen2017entropy}.  In this work, we describe how to construct discretely entropy conservative schemes to a more general class of DG methods using flux differencing, quadrature-based projections, and specific DG differentiation operators.  This approach also recovers existing methods for Burgers' equation involving dense norm and generalized SBP operators without boundary nodes \cite{fernandez2014generalized, ranocha2016summation, ranocha2017extended}.  Numerical experiments confirm the stability and high order accuracy of the proposed methods for the one-dimensional compressible Euler equations.  
 \end{abstract}
 \end{frontmatter}
 
@@ -340,13 +340,13 @@ The accuracy of high order methods can be attributed in part to their low numeri
 
 For linear wave propagation problems, semi-discretely energy stable numerical methods can be constructed, even in the presence of curvilinear coordinates or variable coefficients \cite{warburton2013low, chan2016weight1, chan2016weight2, chan2017weight}.  This semi-discrete stability implies that, under a stable timestep restriction (CFL condition), discrete solutions do not suffer from non-physical growth in time.  However, for nonlinear systems of conservation laws, traditional methods do not admit theoretical proofs of semi-discrete stability.  This was addressed for low order methods with the introduction of discretely entropy conservative and entropy stable finite volume schemes by Tadmor \cite{tadmor1987numerical}.   These schemes rely on a specific entropy conservative flux which satisfies a condition involving the entropy variables and entropy potential, and were extended to low order finite volume methods on unstructured grids in \cite{ray2016entropy}.  High order entropy stable methods were also developed for structured grids in \cite{fjordholm2012arbitrarily} based on an entropy conservative essentially non-oscillatory (ENO) reconstruction.  
 
-The extension of entropy conservative schemes to unstructured high order methods was done much more recently for the compressible Euler and Navier-Stokes equations in \cite{fisher2013high, carpenter2014entropy} based on a spectral collocation approach on tensor product elements, which can also be interpreted as a mass-lumped DG spectral element (DG-SEM) scheme.  The proof of entropy conservation relies on the presence of a diagonal mass matrix, the summation by parts (SBP) property \cite{gassner2013skew}, and  a concept referred to as flux differencing.  Similar entropy-stable schemes have been constructed for the shallow water and MHD equations \cite{gassner2016well,  wintermeyer2017entropy, winters2017uniquely}.  More recently, high order entropy conservative and entropy stable schemes were extended to unstructured triangular meshes in \cite{chen2017entropy} using the split-form methodology of \cite{gassner2016split} and multi-dimensional SBP operators \cite{hicken2016multidimensional}.  
+The extension of entropy conservative schemes to unstructured high order methods was done much more recently for the compressible Euler and Navier-Stokes equations in \cite{fisher2013high, carpenter2014entropy} based on a spectral collocation approach on tensor product elements, which can also be interpreted as a mass-lumped DG spectral element (DG-SEM) scheme.  The proof of entropy conservation relies on the presence of a diagonal mass matrix, the summation by parts (SBP) property \cite{gassner2013skew}, and  a concept referred to as flux differencing.  Similar entropy-stable schemes have been constructed for the shallow water and MHD equations \cite{gassner2016well,  wintermeyer2017entropy, winters2017uniquely}.  More recently, high order entropy conservative and entropy stable schemes were extended to unstructured triangular meshes in \cite{chen2017entropy} using the split-form methodology of \cite{gassner2016split} and multi-dimensional SBP operators \cite{hicken2016multidimensional, crean2017high}.  
 
 To the authors knowledge, the construction of unstructured high order entropy conservative and entropy stable schemes  has required diagonal norm SBP operators.  We refer to DG methods with these properties as diagonal norm SBP-DG methods.  Entropy stable high order finite element and DG methods which do not fall under the diagonal norm SBP-DG category have been proposed \cite{hughes1986new}, but the proofs are often given at the continuous level, relying on exact integration or the chain rule, neither of which holds discretely.
 
 On the other hand, while entropy conservative schemes can be constructed by combining flux differencing with diagonal norm SBP operators, this restricts methods to specific choices of basis and quadrature.  Appropriate diagonal norm SBP operators are straightforward to construct on tensor product elements based on a DG-SEM discretization.  Diagonal-norm SBP operators can also be constructed for triangles and tetrahedra \cite{chin1999higher,  hicken2016multidimensional, chen2017entropy}; however, the number of nodal points for such operators is typically greater than the dimension of the natural polynomial approximation space.  Furthermore, to the author's knowledge, appropriate point sets have only been constructed for $N \leq 4$ in three dimensions \cite{zhebel2014comparison}, and the construction of high order diagonal norm SBP-DG methods has not yet been performed for uncommon elements such as pyramids \cite{chan2016orthogonal}.  
 
-This work focuses on the construction of entropy conservative high order DG schemes for systems of conservation laws.  In order to generalize beyond diagonal norm SBP-DG methods, we will consider non-lumped (dense) mass matrices and more general quadrature rules (e.g.\ rules without boundary points, rules with more points than the dimension of the corresponding approximation space), which are also related to dense norm and generalized SBP operators \cite{ranocha2016summation, ranocha2017extended, ranocha2017comparison}.  The work presented in this manuscript is intended to serve as a stepping stone to the construction of entropy stable DG methods on general elements in two and three dimensions.  We will present proofs of discrete entropy stability in terms of integrals and $L^2$ projections, which we assume are computed using an appropriate quadrature rule.  We stress that, while this work adopts a continuous notation involving integrals rather than discrete sums, the proofs rely only on properties of quadrature-based integration and quadrature-based $L^2$ projection.  
+This work focuses on the construction of entropy conservative high order DG schemes for systems of conservation laws.  In order to generalize beyond diagonal norm SBP-DG methods, we will consider non-lumped (dense) mass matrices and more general quadrature rules (e.g.\ rules without boundary points, rules with more points than the dimension of the corresponding approximation space), which are also related to dense norm and generalized SBP operators \cite{fernandez2014generalized, ranocha2016summation, ranocha2017extended, ranocha2017comparison}.  The work presented in this manuscript is intended to serve as a stepping stone to the construction of entropy stable DG methods on general elements in two and three dimensions.  We will present proofs of discrete entropy stability in terms of integrals and $L^2$ projections, which we assume are computed using an appropriate quadrature rule.  We stress that, while this work adopts a continuous notation involving integrals rather than discrete sums, the proofs rely only on properties of quadrature-based integration and quadrature-based $L^2$ projection.  
 
 The outline of the paper is as follows: Section~\ref{sec:intro} will briefly review the construction of entropy conservative diagonal norm SBP-DG methods on a single element.  Section~\ref{sec:ecdg} will describe how to construct analogous entropy conservative methods on single element in a continuous setting.  Section~\ref{sec:ecdg2} will discuss extensions to multiple elements, including comparisons of different coupling terms and entropy stable fluxes.  Finally, Section~\ref{sec:num} presents numerical results which verify the high order accuracy and discrete entropy conservation of the proposed methods.  We note that, for simplicity and clarity of presentation, the proposed methods, proofs, and numerical experiments are given in one dimension.  However, the extension to multiple dimensions (including simplicial elements) is straightforward and will be described in an upcoming manuscript.  
 
